# Reinforcement-Learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: codebase-direction.md
notebooks/: 01_mdp_fundamentals.ipynb  02_qlearning_vs_sarsa.ipynb  03_reinforce.ipynb  04_dqn_deep_dive.ipynb  05_ppo_deep_dive.ipynb  06_rlhf.ipynb  07_dpo.ipynb  08_grpo.ipynb
rl_lab/: __init__.py  cli.py
rl_lab/agents/: __init__.py  base.py  dqn.py  ppo.py  q_learning.py  sarsa.py
rl_lab/environments/: __init__.py
rl_lab/experiments/: 00_verify_setup.py  __init__.py  train_frozenlake.py
rl_lab/utils/: __init__.py  common.py
tests/: __init__.py
